--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -477,7 +477,7 @@ button.item-button-right:after {
 }
 
 
-// Item Animations
+// Item Editing
 // -------------------------------
 
 .item-sliding {
@@ -493,12 +493,12 @@ button.item-button-right:after {
   opacity: 0.7;
 }
 
+
 /**
  * The left-side edit area of a complex list item. This area shows
  * whe the list item is in edit mode.
  */
 .item-edit {
-
   @include transition(left 0.2s ease-in-out, opacity 0.2s ease-in-out);
   position: absolute;
   top: 0;
@@ -510,7 +510,8 @@ button.item-button-right:after {
 
   .button {
     height: 100%;
-    .icon, i {
+
+    &.icon {
       @include display-flex();
       @include align-items(center);
       position: absolute;
@@ -546,19 +547,21 @@ button.item-button-right:after {
   top: 0;
   right: 0;
   z-index: 0;
+  width: 50px;
   height: 100%;
+  background: inherit;
 
   .button {
     height: 100%;
-    border: none;
-    border-radius: 0;
-    .icon, i {
+    min-width: 42px;
+
+    &.icon:before {
       @include display-flex();
       @include align-items(center);
       position: absolute;
       top: 0;
       height: 100%;
-      font-size: 24px;
+      font-size: 32px;
     }
   }
 }
@@ -570,7 +573,7 @@ button.item-button-right:after {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 0;
   height: 100%;
 
   .button {
@@ -578,4 +581,8 @@ button.item-button-right:after {
     border: none;
     border-radius: 0;
   }
+}
+
+.item-options-hide .item-options {
+  display: none;
 }
